[package]
name = "contract"
description = "Simple Pay to Sign"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.15.1", features = ["schemars"]}
schemars = { version = "0.8.22" }
serde_json = "1.0.135"
base64 = "0.22.1"
serde = "1.0.217"
borsh = "1.5.1"
hex = "0.4.3"
k256 = "0.13"
mpc-contract = { path = "../mpc/crates/contract" }

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true